# python-project-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yaml  ci.yml  dependencies.yaml  sematic-pr-check.yml
src/python_project_template/: __init__.py
template_scripts/get_started/: setup_project.sh
